@@ -1,4 +1,5 @@
 2006-12-03
+    - make a bad Dinode re-read not a terminal error in envelope.c
     - differentiate between implied or defined SMTP in the red structure
     - add LOCALHOST token to RED rules
     - removed env_dup() from envelope.c, unused function
